--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -1,13 +1,22 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Palatino;
 }
+.navbar {
+    background-color: #333; 
+    color: #fff; 
+    width: 100%;
+    position: fixed;
+    transition: top 0.3s; 
+    z-index: 1000; 
+    box-shadow: 0px 2px 10px#555;
+  }
 .hero-bg{
     background:#fff;
-    height: auto;
     width: auto;
     color: black;
+    height: auto;
 }
 .speclist-edu ul {
     list-style-type: none;
@@ -49,12 +58,12 @@
     color: #000;
     padding: 10px;
     border-radius: 15px;
-    height: 60px;
+    height: 80px;
     width: 300px;
     text-align: center;
     align-content: center;
     font-size: 13px;
-    box-shadow: #555 5px 5px 10px;
+    box-shadow: #555 1px 5px 10px;
 }
 .white{
     color: #fff;
@@ -229,6 +238,7 @@ tr th td{
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    padding: 30px;
 }
 .upper{
     box-shadow: #0099ff 0px 10px 2px;
@@ -375,6 +385,9 @@ tr th td{
     color: black;
     font-weight: bold;
     font-size: 20px;
+}
+.icon{
+    font-size: 15px;
 }
 @media screen and (max-width : 767px) {
     .hero{
