--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -390,6 +390,9 @@ tr th td{
     font-size: 15px;
 }
 @media screen and (max-width : 767px) {
+    *{
+        font-size: 20px;
+    }
     .hero{
         height: 75vh;
     }
