--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -183,6 +183,11 @@
 .hero h4{
     font-weight: bold;
 }
+.expert{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* specialization */
 .specialization{
@@ -190,6 +195,9 @@
     height: auto;
     width: auto;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -216,6 +224,10 @@
     gap: 20px;
     list-style-type: none;
     display: flex;
+}
+.social-skill{
+    display: flex;
+    justify-content: center;
 }
 .media{
     color: #979797;
@@ -403,6 +415,56 @@ tr th td{
        display: flex;
        flex-direction: column;
     }
+}
+@media screen and (max-width : 455px) {
+   .spec{
+    background: #fff;
+    color: #000;
+    padding: 10px;
+    border-radius: 15px;
+    height: 80px;
+    width: 200px;
+    text-align: center;
+    align-content: center;
+    font-size: 13px;
+    box-shadow: #555 1px 5px 10px;
+   }
+   .spec-bl{
+    height: auto;
+    padding: 10px;
+    width: 300px; 
+}
+.spec-pro{
+    height: auto;
+    width: auto;
+}
+.spec-im{
+    padding: 10px;
+    height: auto;
+    width: 300px;
+}
+   .spec-bl3{
+    background:  #0099ff;
+    color: #000;
+    padding: 10px 30px;
+    border-radius: 15px;
+    height: auto;
+    width: 300px;
+    align-content: center;
+    font-size: 13px;
+    box-shadow: blue 10px 10px 15px;
+}
+.gray{
+    background:  white;
+    color: #000;
+    padding: 10px 30px;
+    border-radius: 15px;
+    height: auto;
+    width: 300px;
+    align-content: center;
+    font-size: 13px;
+    box-shadow: #555 10px 10px 15px;
+}
 }
 @media screen and (max-width : 1000px) {
     .speclist-bl ul{
