--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -187,6 +187,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px;
 }
 
 /* specialization */
@@ -423,11 +424,7 @@ tr th td{
     padding: 10px;
     border-radius: 15px;
     height: 80px;
-    width: 200px;
-    text-align: center;
-    align-content: center;
-    font-size: 13px;
-    box-shadow: #555 1px 5px 10px;
+    width: 250px;
    }
    .spec-bl{
     height: auto;
